--- a/index.html
+++ b/index.html
@@ -8,57 +8,57 @@
 <h1>ДЗ 5Б!(2024)</h1>
 
 
-<table>  <tr><td>	понедельник	</td><td>	ГЕОГРАФИЯ: 	</td></tr>
-    <tr><td>	26.02.2024	</td><td>	ЕСТЕСТВОЗНАНИЕ:        	</td></tr>
-    <tr><td>		</td><td>	ИЗО: 	</td></tr>
-    <tr><td>		</td><td>	ИСТОРИЯ: 	</td></tr>
-    <tr><td>		</td><td>	КРАЕВЕДИНИЕ: 	</td></tr>
-    <tr><td>		</td><td>	ЛИТЕРАТУРА: 	</td></tr>
-    <tr><td>		</td><td>	МУЗЫКА: 	</td></tr>
+<table>  <tr><td>	понедельник	</td><td>	 РУССКИЙ: УПР.509 	</td></tr>
+    <tr><td>	26.02.2024	</td><td>	  ТЕХНОЛОГИЯ: ЧЕРТЕЖ      	</td></tr>
+    <tr><td>		</td><td>	МАТЕМАТИКА: №847 №848		</td></tr>
+    <tr><td>		</td><td>	ТЕХНОЛОГИЯ: ЧЕРТЕЖ 	</td></tr>
+    <tr><td>		</td><td>		</td></tr>
+    <tr><td>		</td><td>		</td></tr>
+    <tr><td>		</td><td> 	</td></tr>
     <tr><td>		</td><td>		</td></tr>
     <tr><td>		</td><td>		</td></tr>
     <tr><td>		</td><td>		</td></tr>
     <tr><td>		</td><td>		</td></tr>
-    <tr><td>	вторник	</td><td>	ГЕОГРАФИЯ: 	</td></tr>
-    <tr><td>	27.02.2024	</td><td>	ЕСТЕСТВОЗНАНИЕ: смотреть в днивнике      	</td></tr>
-    <tr><td>		</td><td>	ИЗО: 	</td></tr>
-    <tr><td>		</td><td>	ИСТОРИЯ: 	</td></tr>
-    <tr><td>		</td><td>	КРАЕВЕДИНИЕ: 	</td></tr>
-    <tr><td>		</td><td>	ЛИТЕРАТУРА: 	</td></tr>
-    <tr><td>		</td><td>	МУЗЫКА: 	</td></tr>
+    <tr><td>	вторник	</td><td>	 	</td></tr>
+    <tr><td>	27.02.2024	</td><td>	     	</td></tr>
+    <tr><td>		</td><td> 	</td></tr>
+    <tr><td>		</td><td>		</td></tr>
+    <tr><td>		</td><td>	 	</td></tr>
+    <tr><td>		</td><td>		</td></tr>
+    <tr><td>		</td><td>	 	</td></tr>
     <tr><td>		</td><td>		</td></tr>
     <tr><td>		</td><td>		</td></tr>
     <tr><td>		</td><td>		</td></tr>
     <tr><td>		</td><td>		</td></tr>
-    <tr><td>	среда	</td><td>	ГЕОГРАФИЯ: 	</td></tr>
-    <tr><td>	28.02.2024	</td><td>	ЕСТЕСТВОЗНАНИЕ:        	</td></tr>
-    <tr><td>		</td><td>	ИЗО: 	</td></tr>
-    <tr><td>		</td><td>	ИСТОРИЯ: 	</td></tr>
-    <tr><td>		</td><td>	КРАЕВЕДИНИЕ: 	</td></tr>
-    <tr><td>		</td><td>	ЛИТЕРАТУРА: 	</td></tr>
-    <tr><td>		</td><td>	МУЗЫКА: 	</td></tr>
+    <tr><td>	среда	</td><td>		</td></tr>
+    <tr><td>	28.02.2024	</td><td>	        	</td></tr>
+    <tr><td>		</td><td>		</td></tr>
+    <tr><td>		</td><td>		</td></tr>
+    <tr><td>		</td><td>	 	</td></tr>
+    <tr><td>		</td><td>	</td></tr>
     <tr><td>		</td><td>		</td></tr>
     <tr><td>		</td><td>		</td></tr>
     <tr><td>		</td><td>		</td></tr>
     <tr><td>		</td><td>		</td></tr>
-    <tr><td>	четверг	</td><td>	ГЕОГРАФИЯ: 	</td></tr>
-    <tr><td>	29.02.2024	</td><td>	ЕСТЕСТВОЗНАНИЕ:        	</td></tr>
-    <tr><td>		</td><td>	ИЗО: 	</td></tr>
-    <tr><td>		</td><td>	ИСТОРИЯ: 	</td></tr>
-    <tr><td>		</td><td>	КРАЕВЕДИНИЕ: 	</td></tr>
-    <tr><td>		</td><td>	ЛИТЕРАТУРА: 	</td></tr>
-    <tr><td>		</td><td>	МУЗЫКА: 	</td></tr>
+    <tr><td>		</td><td>		</td></tr>
+    <tr><td>	четверг	</td><td>	 	</td></tr>
+    <tr><td>	29.02.2024	</td><td>	       	</td></tr>
+    <tr><td>		</td><td>		</td></tr>
+    <tr><td>		</td><td>	 	</td></tr>
+    <tr><td>		</td><td>	 	</td></tr>
+    <tr><td>		</td><td>	 	</td></tr>
     <tr><td>		</td><td>		</td></tr>
     <tr><td>		</td><td>		</td></tr>
     <tr><td>		</td><td>		</td></tr>
     <tr><td>		</td><td>		</td></tr>
-    <tr><td>	пятница	</td><td>	ГЕОГРАФИЯ: 	</td></tr>
-    <tr><td>	01.03.2024	</td><td>	ЕСТЕСТВОЗНАНИЕ:        	</td></tr>
-    <tr><td>		</td><td>	ИЗО: 	</td></tr>
-    <tr><td>		</td><td>	ИСТОРИЯ: 	</td></tr>
-    <tr><td>		</td><td>	КРАЕВЕДИНИЕ: 	</td></tr>
-    <tr><td>		</td><td>	ЛИТЕРАТУРА: 	</td></tr>
-    <tr><td>		</td><td>	МУЗЫКА: 	</td></tr>
+    <tr><td>		</td><td>		</td></tr>
+    <tr><td>	пятница	</td><td>	 	</td></tr>
+    <tr><td>	01.03.2024	</td><td>	        	</td></tr>
+    <tr><td>		</td><td>		</td></tr>
+    <tr><td>		</td><td>	 	</td></tr>
+    <tr><td>		</td><td>	 	</td></tr>
+    <tr><td>		</td><td>	 	</td></tr>
+    <tr><td>		</td><td>	 	</td></tr>
     
     
     </table>
@@ -66,7 +66,3 @@
 
 </body>
 </html>
-
-
-
-
