--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
 
 
-    <body background="file:///C:/Users/natan/OneDrive/Рабочий%20стол/папка%20програм/МОЙ%20ФОН.png"></body>
+    <body background="<img src ="https://acdn.tinkoff.ru/static/pages/files/a36e7df3-3a32-40c9-93ea-9aa78008e2a4.png">"></body>
 
 <h1>ДЗ 5Б!(2024)</h1>
 
