--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
 
 
-    <body background="<img src ="https://acdn.tinkoff.ru/static/pages/files/a36e7df3-3a32-40c9-93ea-9aa78008e2a4.png">"></body>
+    <body background="https://avatars.mds.yandex.net/i?id=82956c67e114add39c1a11a3d54d502e5fbf941f-12637272-images-thumbs&n=13"></body>
 
 <h1>ДЗ 5Б!(2024)</h1>
 
