--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
         
 <h1>
     <table>  <tr><td>понедельник	                  	                                                                                                     </td></tr>
-        <tr><td>18.03.2024                              </td><td>   	        	    <b> нету  :</b>              <i>   	           </i>                       </td></tr>
-        <tr><td>	                                 	</td><td>	  	                <b>  нету : </b>           <i>   	                </i>                       </td></tr>
+        <tr><td>18.03.2024                              </td><td>   	        	    <b> нет  :</b>              <i>   	           </i>                       </td></tr>
+        <tr><td>	                                 	</td><td>	  	                <b>  нет : </b>           <i>   	                </i>                       </td></tr>
         <tr><td>		                                </td><td>    	 	            <b> биолокия:  </b>         <i>   	дописать таблицу: значение живых организмов в природе и для человека                 </i>               </td></tr> 
-        <tr><td>		                                </td><td>	                   <b> история:</b>            <i>       ни чего                </i>                                     </td></tr>
+        <tr><td>		                                </td><td>	                   <b> история:</b>            <i>       ничего                </i>                                     </td></tr>
         <tr><td>	                                 	</td><td>		                <b> русский: </b>           <i>  разбор слов под цифрой "3" темени,скворцов,книга.                </i>                       </td></tr>
         <tr><td>	                                	</td><td> 	                    <b>математика: </b>         <i>  5 вариант впр с сайта stamgia.ru             </i>       </td></tr>
-        <tr><td>		                                </td><td>		                 <b>разговор о важном: </b>        <i>  ни чего 	          </i>                        </td></tr>
+        <tr><td>		                                </td><td>		                 <b>разговор о важном: </b>        <i>  ничего 	          </i>                        </td></tr>
         <tr><td>	                                	</td><td>		                  <b> </b>                   <i>   	                              </td></tr>
         <tr><td>	                                	</td><td>	                                       <i>   	                                     </td></tr>
         <tr><td>		                                </td><td>		                              <i>   	                                         </td></tr>   
