--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <tr><td>		                                </td><td>    	 	            <b> биолокия:  </b>         <i>   	дописать таблицу: значение живых организмов в природе и для человека                 </i>               </td></tr> 
         <tr><td>		                                </td><td>	                   <b> история:</b>            <i>       ничего                </i>                                     </td></tr>
         <tr><td>	                                 	</td><td>		                <b> русский: </b>           <i>  разбор слов под цифрой "3" темени,скворцов,книга.                </i>                       </td></tr>
-        <tr><td>	                                	</td><td> 	                    <b>математика: </b>         <i>  5 вариант впр с сайта stamgia.ru <img src ="https://math5-vpr.sdamgia.ru/test?id=2223898">
+        <tr><td>	                                	</td><td> 	                    <b>математика: </b>         <i>  5 вариант впр с сайта stamgia.ru <a href="https://math5-vpr.sdamgia.ru/test?id=2223898">сылка на этот сайт</a>
           </i>       </td></tr>
         <tr><td>		                                </td><td>		                 <b>разговор о важном: </b>        <i>  ничего 	          </i>                        </td></tr>
         <tr><td>	                                	</td><td>		                  <b> </b>                   <i>   	                              </td></tr>
