--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
         
         
         <tr><td>пятница	                                </td><td>	 	                       <i>   	                                      </td></tr>
-        <tr><td>05.04.2024                           	</td><td>	        	        <b>математика     </b>  <i>   	                                      </td></tr>
-        <tr><td>		                                </td><td>	                   <b>  руский     </b> <i>   	                                       </td></tr>
+        <tr><td>05.04.2024                           	</td><td>	        	        <b>математика     </b>  <i>   №941,943	                                      </td></tr>
+        <tr><td>		                                </td><td>	                   <b>  руский     </b> <i>   	    упр.623                                    </td></tr>
         <tr><td>		                                </td><td>	 	                <b>  естествознание     </b><i>  интерестный факт 	                                      </td></tr>
         <tr><td>		                                </td><td>	 	                <b>  английский(Седова)    </b> <i>   	                                       </td></tr>
         <tr><td>		                                </td><td>	 	                <b>     </b>  <i>   	                                       </td></tr>
