--- a/reg3.html
+++ b/reg3.html
@@ -61,8 +61,7 @@
 </head>
 <body>
     <div class="container">
-
-        <div id="login-form">
+        <div id="login-form" class="hidden">
             <h2>Вход</h2>
             <form onsubmit="handleLogin(event)">
                 <div class="form-group">
@@ -81,7 +80,7 @@
         </div>
 
 
-        <div id="register-form" class="hidden">
+        <div id="register-form" >
             <h2>Регистрация</h2>
             <form onsubmit="handleRegister(event)">
                 <div class="form-group">
@@ -100,12 +99,11 @@
             </form>
             <p>Уже есть аккаунт? <a href="#" onclick="showLoginForm()">Войти</a></p>
         </div>
-
-
     </div>
 
     <script>
-        function showRegisterForm() {
+        // Заменили порядок, чтобы register-form отображался первым
+         function showRegisterForm() {
             document.getElementById('login-form').classList.add('hidden');
             document.getElementById('register-form').classList.remove('hidden');
         }
@@ -114,8 +112,7 @@
             document.getElementById('login-form').classList.remove('hidden');
             document.getElementById('register-form').classList.add('hidden');
         }
-
-        function handleRegister(event) {
+          function handleRegister(event) {
             event.preventDefault();
             const username = document.getElementById('register-username').value;
             const password = document.getElementById('register-password').value;
