--- a/reg3.html
+++ b/reg3.html
@@ -62,7 +62,7 @@
 <body>
     <div class="container">
 
-       <div id="register-form">
+        <div id="register-form">
             <h2>Регистрация</h2>
             <form onsubmit="handleRegister(event)">
                 <div class="form-group">
@@ -73,7 +73,7 @@
                     <label for="register-password">Пароль</label>
                     <input type="password" id="register-password" required>
                 </div>
-                 <div class="form-group">
+                <div class="form-group">
                     <label for="register-email">Email</label>
                     <input type="text" id="register-email" required>
                 </div>
@@ -102,7 +102,7 @@
     </div>
 
     <script>
-        function showRegisterForm() {
+          function showRegisterForm() {
             document.getElementById('login-form').classList.add('hidden');
             document.getElementById('register-form').classList.remove('hidden');
         }
@@ -112,7 +112,8 @@
             document.getElementById('register-form').classList.add('hidden');
         }
 
-        function handleRegister(event) {
+
+          function handleRegister(event) {
             event.preventDefault();
             const username = document.getElementById('register-username').value;
             const password = document.getElementById('register-password').value;
@@ -120,10 +121,11 @@
 
             localStorage.setItem('username', username);
             localStorage.setItem('password', password);
-            localStorage.setItem('email',email);
+            localStorage.setItem('email', email);
 
-             alert('Регистрация прошла успешно!');
+           window.location.href = 'https://github.com/naruto2510/my-homework3-/blob/main/index.html';
         }
+
 
         function handleLogin(event) {
             event.preventDefault();
@@ -139,15 +141,11 @@
             }
 
             if (username === storedUsername && password === storedPassword) {
-                alert('Вход выполнен успешно!');
+               alert('Вход выполнен успешно!');
             } else {
                 document.getElementById('login-error').classList.remove('hidden');
             }
         }
-    </script>
-</body>
-</html>
-
     </script>
 </body>
 </html>
