--- a/index.html
+++ b/index.html
@@ -1,4 +1,24 @@
-<!DOCTYPE html>  <html>
+<!DOCTYPE html>
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Главная страница</title>
+</head>
+<body>
+    <h1>Главная страница</h1>
+    <p>Добро пожаловать на главную страницу!</p>
+    <script>
+        if (!localStorage.getItem('username') ) {
+           window.location.href = 'index.html';
+         }
+       // Здесь можно добавить другой контент для отображения зарегистрированным пользователям
+
+    </script>
+</body>
+</html>
+<html>
     <head>
     <title>ДЗ 6Б (лучший класс)</title>
     </head>
