--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
@@ -7,14 +6,15 @@
     <title>Главная страница</title>
 </head>
 <body>
-    <h1>Главная страница</h1>
-    <p>Добро пожаловать на главную страницу!</p>
     <script>
-        if (!localStorage.getItem('username') ) {
-           window.location.href = 'index.html';
-         }
-       // Здесь можно добавить другой контент для отображения зарегистрированным пользователям
-
+        if (!localStorage.getItem('username')) {
+             window.location.href = 'index.html';
+        }else{
+         document.body.innerHTML = `
+           <h1>Главная страница</h1>
+          <p>Добро пожаловать на главную страницу!</p>
+          `;
+        }
     </script>
 </body>
 </html>
