--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 <body>
     <script>
         if (!localStorage.getItem('username')) {
-             window.location.href = 'index.html';
-        }else{
-         document.body.innerHTML = `
-           <h1>Главная страница</h1>
-          <p>Добро пожаловать на главную страницу!</p>
-          `;
+            window.location.href = 'E:\register.html\reg3.html';
+        } else {
+          document.body.innerHTML = `
+             <h1>Главная страница</h1>
+             <p>Добро пожаловать на главную страницу!</p>
+           `;
         }
     </script>
 </body>
