--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 <body>
     <div class="container">
 
-        <div id="register-form">
+       <div id="register-form">
             <h2>Регистрация</h2>
             <form onsubmit="handleRegister(event)">
                 <div class="form-group">
@@ -101,7 +101,7 @@
         </div>
     </div>
 
-   <script>
+    <script>
         function showRegisterForm() {
             document.getElementById('login-form').classList.add('hidden');
             document.getElementById('register-form').classList.remove('hidden');
@@ -111,21 +111,22 @@
             document.getElementById('login-form').classList.remove('hidden');
             document.getElementById('register-form').classList.add('hidden');
         }
-         function handleRegister(event) {
+
+          function handleRegister(event) {
             event.preventDefault();
             const username = document.getElementById('register-username').value;
             const password = document.getElementById('register-password').value;
             const email = document.getElementById('register-email').value;
 
-
              localStorage.setItem('username', username);
-            localStorage.setItem('password', password);
-            localStorage.setItem('email', email);
+             localStorage.setItem('password', password);
+             localStorage.setItem('email',email);
 
+            window.location.href = 'Homwork5B.html.html'; // Относительный путь
 
-            window.location.href = 'C:/Users/natan/OneDrive/Рабочий стол/папка програм/Homwork5B.html.html';
         }
-      function handleLogin(event) {
+
+        function handleLogin(event) {
             event.preventDefault();
             const username = document.getElementById('login-username').value;
             const password = document.getElementById('login-password').value;
