--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             const isLocal = window.location.protocol === 'file:';
 
             if (isLocal) {
-               window.location.href = 'C:/Users/natan/OneDrive/Рабочий стол/папка програм/Homwork5B.html.html'; // Локальный путь
+               window.location.href = 'https://github.com/naruto2510/my-homework3-/blob/main/reg3.html'; // Локальный путь
             } else {
               window.location.href = 'Homwork5B.html.html'; // Относительный путь для GitHub Pages
              }
@@ -151,7 +151,7 @@
             if (username === storedUsername && password === storedPassword) {
 
               if (isLocal) {
-                window.location.href = 'C:/Users/natan/OneDrive/Рабочий стол/папка програм/Homwork5B.html.html'; // Локальный путь
+                window.location.href = 'https://github.com/naruto2510/my-homework3-/blob/main/reg3.html'; // Локальный путь
                 } else {
                   window.location.href = 'Homwork5B.html.html'; // Относительный путь для GitHub Pages
                   }
