--- a/index.html
+++ b/index.html
@@ -111,53 +111,72 @@
             document.getElementById('login-form').classList.remove('hidden');
             document.getElementById('register-form').classList.add('hidden');
         }
-
-
-        function handleRegister(event) {
+        async function handleRegister(event) {
             event.preventDefault();
             const username = document.getElementById('register-username').value;
             const password = document.getElementById('register-password').value;
             const email = document.getElementById('register-email').value;
 
-            localStorage.setItem('username', username);
-            localStorage.setItem('password', password);
-            localStorage.setItem('email', email);
-            const isLocal = window.location.protocol === 'file:';
+             const userData = {
+                  username: username,
+                  password: password,
+                   email: email
+             }
+            try{
+              const response = await fetch ('data.json')
+             let users = []
+           if(response.ok){
+              users = await response.json()
+           }
 
-            if (isLocal) {
-               window.location.href = 'C:\Users\natan\OneDrive\Рабочий стол\папка програм\Homwork5B.html.html'; // Локальный путь
+
+          users.push(userData)
+         await fetch('data.json',{
+             method: 'PUT',
+             headers:{
+                'Content-Type': 'application/json',
+             },
+              body: JSON.stringify(users),
+          })
+           const isLocal = window.location.protocol === 'file:';
+             if (isLocal) {
+              window.location.href = 'C:/Users/natan/OneDrive/Рабочий стол/папка програм/Homwork5B.html.html'; // Локальный путь
             } else {
               window.location.href = 'Homwork5B.html.html'; // Относительный путь для GitHub Pages
-             }
+            }
 
-        }
-
-         function handleLogin(event) {
+            }catch(error){
+                console.error('Ошибка при сохранении данных',error)
+            }
+         }
+        async function handleLogin(event) {
             event.preventDefault();
             const username = document.getElementById('login-username').value;
             const password = document.getElementById('login-password').value;
 
-            const storedUsername = localStorage.getItem('username');
-            const storedPassword = localStorage.getItem('password');
-
-
-             const isLocal = window.location.protocol === 'file:';
-
-           if (storedUsername === null) {
-                document.getElementById('login-noaccount').classList.remove('hidden');
-                return;
-            }
-
-            if (username === storedUsername && password === storedPassword) {
-
-              if (isLocal) {
-                window.location.href = 'C:\Users\natan\OneDrive\Рабочий стол\папка програм\Homwork5B.html.html'; // Локальный путь
-                } else {
-                  window.location.href = 'Homwork5B.html.html'; // Относительный путь для GitHub Pages
+             try {
+                const response = await fetch('data.json');
+                  if (!response.ok) {
+                       throw new Error('Ошибка при чтении данных');
                   }
-            } else {
-                document.getElementById('login-error').classList.remove('hidden');
-            }
+                  const users = await response.json();
+
+                 const user = users.find(user => user.username === username && user.password === password);
+                 const isLocal = window.location.protocol === 'file:';
+               if (user) {
+                 if (isLocal) {
+                   window.location.href = 'C:/Users/natan/OneDrive/Рабочий стол/папка програм/Homwork5B.html.html'; // Локальный путь
+                 } else {
+                 window.location.href = 'Homwork5B.html.html'; // Относительный путь для GitHub Pages
+                    }
+
+                } else {
+                   document.getElementById('login-error').classList.remove('hidden');
+                  document.getElementById('login-noaccount').classList.remove('hidden');
+                }
+            } catch (error) {
+                console.error('Ошибка при входе:', error);
+             }
         }
     </script>
 </body>
